--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-DATABASE=pinterest
-DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
+DATABASE=heroku_517f94dc61c38b5
+USER=bf666b76419b69
+PASSWORD=2592dd6d
+HOST=us-cdbr-east-02.cleardb.com
